--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "1.49.10",
+    "toast": "^0.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
